--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -78,6 +78,25 @@ button{
     }
 }
 
+.filterContainer{
+
+    margin: 1em;
+    h1{   
+         text-align: center;
+    }
+    div{
+        display:flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 0.5em;
+        flex-wrap: wrap;
+        button{
+            padding:0.5em 1em;
+        }
+
+    }
+}
+
 form{
     p{ &:hover{cursor: pointer}}
 }
